NLP TP's/texts/robotics/robotics.stackexchange_0000070674.txt
Q:

rgbdslam_v2 on Tegra TK1 build error

Hi ,
My ros version is Indigo base on Ubuntu 14.04 and hardware is using Nvidia TK1.
I follow this web http://felixendres.github.io/rgbdslam_v2/ to install rgbdslam_v2 but something error when building.
Here log shows
====================[ error message ]=====================
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp: In member function 'void GLViewer::drawOneCloud(int)':
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:341:75: error: invalid static_cast from type 'qreal* {aka float*}' to type 'GLdouble* {aka double*}'
glMultMatrixd(static_cast<GLdouble*>( (cloud_matrices)[i].data() ));//works as long as qreal and GLdouble are typedefs to double (might depend on hardware)
^
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp: In member function 'void GLViewer::drawClouds(float)':
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:377:64: error: invalid static_cast from type 'qreal {aka float*}' to type 'GLdouble* {aka double*}'
glMultMatrixd(static_cast<GLdouble*>( viewpoint_tf_.data() ));//works as long as qreal and GLdouble are typedefs to double (might depend on hardware)
^
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer.cpp:416:75: error: invalid static_cast from type 'qreal* {aka float*}' to type 'GLdouble* {aka double*}'
glMultMatrixd(static_cast<GLdouble*>( (*cloud_matrices)[i].data() ));//works as long as qreal and GLdouble are typedefs to double (might depend on hardware)
^
make[2]: *** [rgbdslam_v2/CMakeFiles/rgbdslam.dir/src/glviewer.o] Error 1
make[1]: *** [rgbdslam_v2/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
====================[ error message ]=====================
and if I swap glviewer.cpp with glviewer2.cpp in cmakelist.txt.
it still shows error.
====================[ error message ]=====================
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer2.cpp: In constructor 'GLViewer::GLViewer(QWidget)':
/home/ubuntu/catkin_ws/src/rgbdslam_v2/src/glviewer2.cpp:20:39: error: type 'QWidget' is not a direct base of 'GLViewer'
GLViewer::GLViewer(QWidget *parent) : QWidget(parent) { }
^
make[2]: ** [rgbdslam_v2/CMakeFiles/rgbdslam.dir/src/glviewer2.o] Error 1
make[1]: *** [rgbdslam_v2/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
====================[ error message ]=====================
I also ask on github. But it seems nobody answer that.
https://github.com/felixendres/rgbdslam_v2/issues/17
I am studying rgbd slam. Could anyone give me some advise?
Thanks a lot!!

Originally posted by YingHua on ROS Answers with karma: 196 on 2015-12-01
Post score: 0

Original comments
Comment by YingHua on 2015-12-03:
I have been installed success on x86 platform but still can't on arm.

A:

As the comment says, the cast of the matrix only works if both opengl and qt use the same floating point type.
Maybe you can just change the line
glMultMatrixd(static_cast<GLdouble*>( (*cloud_matrices)[i].data() ));//works as long as qreal and GLdouble are typedefs to double (might depend on hardware) 

to
glMultMatrixf(static_cast<GLfloat*>( (*cloud_matrices)[i].data() ));//works as long as qreal and GLfloat are typedefs to float (depends on hardware)

Originally posted by Felix Endres with karma: 6468 on 2016-01-13
This answer was ACCEPTED on the original site
Post score: 0

